Faster page transition, footer, and fixed menu on mobile - 443, 444, 445

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,6 +1,6 @@
 .page-enter-active,
 .page-leave-active {
-  transition: opacity .3s
+  transition: opacity .1s
 }
 .page-enter,
 .page-leave-to {
